# FlatWorld

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  Readme.md  pyproject.toml  requirements.txt
docs/: THEORY_AND_IMPLEMENTATION.md
flatworld/: .gitignore  __init__.py  bcs.py  bvh.py  contact_detection.py  definitions.py  explicitloop.py  femcontact.py  femdomain.py  femesher.py  femspringmanager.py  gjk.py  grounddomain.py  heightfielddomain.py  initialconditions.py  joint_kernels.py  joints.py  mesh.py  mesh_utils.py  mixedcontact.py  numericaldomain.py  rigid.py  rigiddomain.py  rigidmanager.py  sat.py  solidprop.py  spatialmanager.py  springmass.py  utils.py  viewer.py  voxeldomain.py  wp_init.py
scripts/: capture_gallery.py  capture_gallery_single.py
test2D/: edu_2d_1_1.py  edu_2d_1_10.py  edu_2d_1_11.py  edu_2d_1_12.py  edu_2d_1_2.py  edu_2d_1_3.py  edu_2d_1_4.py  edu_2d_1_5.py  edu_2d_1_7.py  edu_2d_1_8.py  edu_2d_1_9.py  edu_2d_2_10.py  edu_2d_2_15analytical.py  edu_2d_2_15twobox.py  edu_2d_2_21.py  edu_2d_3_1.py  edu_2d_3_19.py  gallery_capture.py  test_2D_wheel_rolling.py  test_2Danalytical_bcs.py  test_2Danalytical_rotation_benchmark.py  test_2Danalyticaldomain.py  test_2Dbox_collision_response.py  test_2Dbox_friction.py  test_2Dbvh.py  test_2Dcapsule_bbox.py  test_2Dcontact_detection.py  test_2Ddomino.py  test_2Dfem2domain_elastic.py  test_2Dfem_bcs.py  test_2Dfem_contact.py  test_2Dfem_elastic.py  test_2Dfem_elastic10000.py  test_2Dfem_force.py  test_2Dfem_heightfield_contact.py  test_2Dfem_ics.py  test_2Dfem_voxel_contact.py  test_2Djoint_bcs.py  (+30 more)
(+6 files in other folders)
