[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flatworld"
version = "0.1.0"
description = "Taichi-based 2D/3D physics engine with FEM, rigid bodies, and mixed contact"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Dongyu Liu" }]
keywords = ["taichi", "physics", "fem", "rigid-body", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "taichi>=1.7.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "tetgen>=0.6",
    "meshio>=5.3",
    "pymeshlab>=2023.12",
    "usd-core>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-html>=4.0",
    "pytest-xdist>=3.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
]

[project.urls]
Documentation = "https://github.com/swaggyliu/FlatWorld/blob/main/docs/THEORY_AND_IMPLEMENTATION.md"
Repository = "https://github.com/swaggyliu/FlatWorld"

[tool.setuptools.packages.find]
where = ["."]
include = ["flatworld*"]

[tool.pytest.ini_options]
testpaths = ["test2D"]
timeout = 120
